# shade-eval-print-loop

./: Cargo.toml  LICENSE  README.org
.github/workflows/: build.yml
emacs/: deps.el  sepl-mode.el  tests.el
example/: README.org  hearts.frag  myscheme.scm  plasma.frag  raymarch.frag  texture.frag
shaders/: myscheme.scm  pass.frag  pass.vert  pass_text.vert  raymarch.frag  solid.frag  text.frag
src/: command.rs  geometry.rs  lib.rs  main.rs  scheme.rs  text.rs
