[package]
name = "shade-eval-print-loop"
version = "0.1.0"
edition = "2024"

[dependencies]
glium = "0.36.0"
nalgebra = "0.33.2"
notify = "8.0.0"
steel-core = { git="https://github.com/mattwparas/steel.git", branch = "master" }
steel-derive = { git="https://github.com/mattwparas/steel.git", branch = "master" }
